--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <div class="container">
        <input type="text" class="lucky-number-input" onfocus="this.value=''">
-       <button class="lucky-number-button">Lucky Numbers</button>
+       <button class="lucky-number-button">Lucky</button>
        <div class="result"></div>
    </div>
     
